# kylin-greeter

./: .bzrignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  kylin-greeter.doap
.bzr/branch/: branch.conf  last-revision
.bzr/checkout/: dirstate
.bzr/repository/: pack-names
.pc/: applied-patches
data/: Makefile.am  com.canonical.unity-greeter.gschema.xml  com.kylin.kylin-greeter.gschema.xml  kylin-greeter.1  kylin-greeter.desktop
debian/: 95-kylin-greeter.conf  changelog  control  copyright  install  maintscript  rules  watch
debian/kylin-greeter/: index.theme
debian/patches/: patch_for_neokylin_init
debian/source/: include-binaries
kylin-greeter/gtk-3.0/: gtk-main.css  gtk-widgets.css
kylin-greeter/gtk-3.0/apps/: kylin-greeter.css  (+1 more)
kylin-greeter/gtk-3.20/: gtk-widgets.css
po/: POTFILES.in  POTFILES.skip  zh_CN.po
src/: Makefile.am  animate-timer.c  animate-timer.vala  background.c  background.vala  cached-image.c  cached-image.vala  cairo-utils.c  cairo-utils.vala  config.vapi  dash-box.c  dash-box.vala  dash-button.c  dash-button.vala  dash-entry.c  dash-entry.vala  email-autocompleter.c  email-autocompleter.vala  fadable-box.c  fadable-box.vala  fadable.c  fadable.vala  fading-label.c  fading-label.vala  fixes.vapi  flat-button.c  flat-button.vala  greeter-list.c  greeter-list.vala  ido.vapi  kylin-greeter.vala  list-stack.c  list-stack.vala  logo-generator.c  main-window.c  main-window.vala  menu.c  menu.vala  menubar.c  prompt-box.c  (+19 more)
tests/: Makefile  Makefile.am  test-list.vala  test.vala  unity-greeter.vala
(+1 files in other folders)
